--- a/api/package.json
+++ b/api/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "output/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register test/**/*.test.ts",
     "build": "tsc",
-    "start": "npm run build && node ."
+    "start": "node .",
+    "dev": "npm run build & npm run start",
+    "ts": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.11",
+    "ajv": "^8.2.0",
     "express": "^4.17.1",
     "lowdb": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/mocha": "^8.2.2",
+    "mocha": "^8.3.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
