--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "output/index.js",
   "scripts": {
-    "test": "mocha --require ts-node/register test/**/*.test.ts",
+    "test": "mocha --require ts-node/register --timeout 10000 test/**/*.test.ts",
     "build": "tsc",
     "start": "node .",
     "dev": "npm run build & npm run start",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "ajv": "^8.2.0",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "lowdb": "^1.0.0"
   },
