--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.11",
     "ajv": "^8.2.0",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "lowdb": "^1.0.0"
   },
